adjusted the PrimaryDark colour

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#49DF13</color>
     <color name="colorPrimaryDark">#1C430B</color>
-    <color name="colorAccent">#D67C91</color>
+    <color name="colorAccent">#C13052</color>
     <color name="colorBacks">#80E808</color>
 </resources>
 
