--- a/app/src/main/res/layout/activity_admini_new_orders.xml
+++ b/app/src/main/res/layout/activity_admini_new_orders.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminiNewOrdersActivity">
+    tools:context=".Admin.AdminiNewOrdersActivity">
 
     <RelativeLayout
         android:id="@+id/r2"
