new changes in gui

--- a/app/src/main/res/layout/activity_admin_category.xml
+++ b/app/src/main/res/layout/activity_admin_category.xml
@@ -34,32 +34,27 @@
         android:layout_marginRight="10dp">
 
         <ImageView
-            android:id="@+id/t_shirts"
+            android:id="@+id/cassava"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
-            android:src="@drawable/tshirts"
-            />
+            android:layout_margin="10dp"
+            android:src="@drawable/cassava" />
 
         <ImageView
-            android:id="@+id/sports_t_shirts"
+            android:id="@+id/yam"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/sports"
+            android:layout_margin="15dp"
+            android:src="@drawable/yam"
             />
 
         <ImageView
-            android:id="@+id/female_dresses"
+            android:id="@+id/sweetPotato"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/female_dresses"
+            android:src="@drawable/sweetpotato"
             />
 
-        <ImageView
-            android:id="@+id/sweathers"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/sweather"
-            />
 
     </LinearLayout>
 
@@ -76,33 +71,23 @@
         android:layout_marginTop="10dp">
 
         <ImageView
-            android:id="@+id/glasses"
-            android:layout_width="80dp"
+            android:id="@+id/sugarcane"
+            android:layout_width="wrap_content"
             android:layout_height="80dp"
-            android:src="@drawable/glasses"
-            />
+            android:src="@drawable/sugarcane" />
 
         <ImageView
-            android:id="@+id/purses_bags_wallets"
-            android:layout_width="90dp"
+            android:id="@+id/ovacado_fruit"
+            android:layout_width="wrap_content"
             android:layout_height="80dp"
-            android:src="@drawable/purses_bags"
-            />
+            android:layout_margin="20dp"
+            android:src="@drawable/ovacado" />
 
         <ImageView
-            android:id="@+id/hats_caps"
-            android:layout_width="80dp"
+            android:id="@+id/jackfruit"
+            android:layout_width="91dp"
             android:layout_height="80dp"
-            android:src="@drawable/hats"
-            />
-
-        <ImageView
-            android:id="@+id/shoes"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:src="@drawable/shoess"
-            android:layout_marginStart="16dp"
-            />
+            android:src="@drawable/jackfruit" />
 
     </LinearLayout>
 
@@ -119,32 +104,25 @@
         android:layout_marginTop="10dp">
 
         <ImageView
-            android:id="@+id/headphones_handfree"
-            android:layout_width="80dp"
+            android:id="@+id/matooke"
+            android:layout_width="122dp"
             android:layout_height="80dp"
-            android:src="@drawable/headphoness"
-            />
+            android:layout_marginStart="16dp"
+            android:src="@drawable/matooke" />
 
         <ImageView
-            android:id="@+id/laptop_pc"
+            android:id="@+id/pineApple"
             android:layout_width="90dp"
             android:layout_height="80dp"
-            android:src="@drawable/laptops"
+            android:layout_margin="20dp"
+            android:src="@drawable/pineapple"
             />
 
         <ImageView
-            android:id="@+id/watches"
+            android:id="@+id/cabbage"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/watches"
-            />
-
-        <ImageView
-            android:id="@+id/mobilephones"
-            android:layout_width="70dp"
-            android:layout_height="80dp"
-            android:src="@drawable/mobiles"
-            android:layout_marginStart="16dp"
+            android:src="@drawable/cabbage"
             />
 
     </LinearLayout>
