--- a/app/src/main/res/layout/activity_admin_maintain_products.xml
+++ b/app/src/main/res/layout/activity_admin_maintain_products.xml
@@ -81,7 +81,7 @@
             android:padding="12dp"
             android:layout_margin="5dp"
             android:background="@drawable/buttons"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimaryDark"
             />
 
 
@@ -96,7 +96,7 @@
             android:padding="12dp"
             android:layout_margin="30dp"
             android:background="@drawable/buttons"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimaryDark"
             />
 
     </RelativeLayout>
