--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/app_logo"
         android:layout_width="300dp"
-        android:layout_height="100dp"
+        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
         android:src="@drawable/applogo" />
@@ -21,11 +21,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="142dp"
-        android:layout_marginEnd="80dp"
-        android:text="Find, Discover, Choose and Buy anything online."
+        android:layout_marginTop="244dp"
+        android:layout_marginEnd="73dp"
+        android:text="Find, Discover, Choose and Buy All your Organic foods."
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="25sp"
         android:textStyle="italic" />
 
@@ -43,7 +43,7 @@
         android:padding="20dp"
         android:text="Already have an Account? Login"
         android:textAllCaps="false"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <Button
@@ -58,7 +58,7 @@
         android:padding="20dp"
         android:text="Join Now"
         android:textAllCaps="false"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
 
