--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="100dp"
         android:src="@drawable/applogo" />
 
     <EditText
@@ -55,6 +55,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="6dp"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/input_design"
         android:hint="Password"
         android:inputType="textPassword"
@@ -76,7 +77,7 @@
         android:padding="17dp"
         android:text="Create Account"
         android:textAllCaps="false"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:visibility="visible"
         tools:visibility="visible" />
