--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -85,7 +85,7 @@
         android:layout_margin="15dp"
         android:layout_below="@+id/question_2"
         android:text="Verify"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         android:textSize="20dp"
         />
