--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -27,7 +27,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Close"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="17sp"
                     android:textStyle="bold"
                     android:layout_alignParentStart="true"
@@ -38,7 +38,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Update"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="17sp"
                     android:textStyle="bold"
                     android:layout_marginRight="10dp"
@@ -115,10 +115,9 @@
         android:layout_below="@+id/settings_address"
         android:text="Set Security Questions"
         android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_margin="15dp"
         android:padding="10dp"
         />
-
 
             </RelativeLayout>
