--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/product_image_details"
         android:text="Product Name"
-        android:textColor="@android:color/black"
+        android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         android:textSize="18sp"
         android:gravity="center"
@@ -31,13 +31,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/product_name_details"
-        android:text="Product Description"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:gravity="center"
         android:layout_marginTop="10dp"
-        />
+        android:gravity="center"
+        android:text="Product Description"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/product_price_details"
@@ -45,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/product_description_details"
         android:text="Product Price"
-        android:textColor="@android:color/black"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         android:textSize="18sp"
         android:gravity="center"
